--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "src/main/native/libpg_query"]
 	path = src/main/native/libpg_query
 	url = https://github.com/lfittl/libpg_query.git
+	branch = 10-latest
