Small cleanup changes

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,4 @@
-[submodule "core/src/main/native/libpg_query"]
-	path = core/src/main/native/libpg_query
-	url = https://github.com/lfittl/libpg_query.git
 [submodule "parser/src/main/native/libpg_query"]
 	path = parser/src/main/native/libpg_query
 	url = https://github.com/lfittl/libpg_query.git
+	branch = 10-latest
