Separated example project, using doobie now

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,6 @@ script:
   - cd ../../../../..
   - sbt parser/compileWrapper
   - sbt parser/test
-  - sbt example/run
+  - sbt publishLocal
+  - cd example
+  - sbt run
