--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,20 @@ dist: bionic
 services:
   - postgresql
 
-addons:
-  postgresql: "10"
-  apt:
-    packages:
-      - postgresql-10
-      - postgresql-client-10
-
 before_script:
   - psql -c 'create database pgquery_example'; -U postgres
+
+before_install:
+  - sudo apt-get update
+  - sudo apt-get --yes remove postgresql\*
+  - sudo apt-get install -y postgresql-10 postgresql-client-10
+  - sudo cp /etc/postgresql/10/main/pg_hba.conf
+  - sudo service postgresql restart 10
+
+env:
+  global:
+    - PGUSER=postgres
+    - PGPORT=5432
 
 script:
   - cd native/src/native/libpg_query
