--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ services:
   - postgresql
 
 before_script:
-  - psql -c 'create database pgquery_example'; -U postgres
+  - psql -c 'create database pgquery_example;' -U postgres
 
 before_install:
   - sudo apt-get update
