Travis using addons for postgres version

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,12 @@ services:
 before_script:
   - psql -c 'create database pgquery_example;' -U postgres
 
-before_install:
-  - sudo apt-get update
-  - sudo apt-get --yes remove postgresql\*
-  - sudo apt-get install -y postgresql-10 postgresql-client-10
-  - sudo cp /etc/postgresql/{9.6,10}/main/pg_hba.conf
-  - sudo service postgresql restart 10
+addons:
+  postgresql: "10"
+  apt:
+    packages:
+      - postgresql-10
+      - postgresql-client-10
 
 env:
   global:
